// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerRoundOutlined matches the snapshot 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(255, 255, 255); overflow: visible; width: 100px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="2"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="14"
      stroke="currentColor"
      stroke-width="1.5"
      style="animation: spinners-react-round-outlined 14s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-width="1.5"
      style="animation: spinners-react-round-outlined 14s ease-in-out infinite;"
    />
  </svg>
</div>
`;

exports[`SpinnerRoundOutlined matches the snapshot with default props 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(56, 173, 72); overflow: visible; width: 50px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="2"
      stroke="currentColor"
      stroke-width="4"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="14"
      stroke="currentColor"
      stroke-width="3"
      style="animation: spinners-react-round-outlined 1.4s ease-in-out infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="28"
      stroke="currentColor"
      stroke-width="3"
      style="animation: spinners-react-round-outlined 1.4s ease-in-out infinite;"
    />
  </svg>
</div>
`;
